Add setting to disable iCloud sync

--- a/platform/iphone/Settings.bundle/Root.plist
+++ b/platform/iphone/Settings.bundle/Root.plist
@@ -24,6 +24,16 @@
 			<key>DefaultValue</key>
 			<string>name</string>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>icloud</string>
+			<key>Key</key>
+			<string>syncToCloud</string>
+			<key>DefaultValue</key>
+			<true/>
+		</dict>
 	</array>
 	<key>StringsTable</key>
 	<string>Root</string>
