Add a setting to force the app in english

--- a/platform/iphone/Settings.bundle/Root.plist
+++ b/platform/iphone/Settings.bundle/Root.plist
@@ -34,6 +34,16 @@
 			<key>DefaultValue</key>
 			<true/>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>forceEn</string>
+			<key>Key</key>
+			<string>forceEn</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
 	</array>
 	<key>StringsTable</key>
 	<string>Root</string>
